@@ -1,8 +1,8 @@
-FROM hmcts/cnp-java-base:openjdk-jre-8-alpine-1.1
+FROM hmcts/cnp-java-base:openjdk-jre-8-alpine-1.4
 
 ENV APP div-case-orchestration-service.jar
-ENV APPLICATION_TOTAL_MEMORY 512M
-ENV APPLICATION_SIZE_ON_DISK_IN_MB 53
+ENV APPLICATION_TOTAL_MEMORY 1024M
+ENV APPLICATION_SIZE_ON_DISK_IN_MB 56
 
 COPY build/libs/$APP /opt/app/
 
@@ -12,4 +12,3 @@ HEALTHCHECK --interval=100s --timeout=100s --retries=10 CMD http_proxy="" wget -
 
 EXPOSE 4012
 
-CMD ["sh", "-c", "java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap ${JAVA_OPTS} -jar /opt/app/$APP"
